--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 !.vscode/extensions.json
 *.code-workspace
 
+# ignore node/grunt dependency directories
+node_modules/
+jspm_packages/
 
 # ignore composer vendor directory
 /vendor
